2023-10-25T08:12:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6637569325 # 1282
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 4 34
* notice: prev accum: outdated-unq outdated-all / unq all: 676 1065 / 699 1100
* notice: next accum: outdated-unq outdated-all / unq all: 676 1065 / 700 1101
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-11 2023-10-25]

2023-10-25T00:41:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6634212962 # 1281
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 4 35
* notice: prev accum: outdated-unq outdated-all / unq all: 672 1058 / 699 1099
* notice: next accum: outdated-unq outdated-all / unq all: 676 1065 / 699 1100
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-10-10] / [2023-10-24]

2023-10-24T08:12:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6624113239 # 1279
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 5 37
* notice: prev accum: outdated-unq outdated-all / unq all: 672 1058 / 697 1097
* notice: next accum: outdated-unq outdated-all / unq all: 672 1058 / 699 1099
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -2 -4 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]

2023-10-23T16:12:04Z: