@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-25T08:12:20Z",
-  "count_outdated" : 1065,
-  "uniques_outdated" : 676,
-  "count" : 1101,
+  "timestamp" : "2023-10-26T00:40:30Z",
+  "count_outdated" : 1068,
+  "uniques_outdated" : 678,
+  "count" : 1102,
   "uniques" : 700,
   "clones" : [
-    {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 3,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
