@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 3,
       "uniques": 2
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
