@@ -1,3 +1,12 @@
+2023-10-26T00:40:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6647895502 # 1284
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
+* notice: last 14d: unq all: 4 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 676 1065 / 700 1101
+* notice: next accum: outdated-unq outdated-all / unq all: 678 1068 / 700 1102
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-10-11] / [2023-10-25]
+
 2023-10-25T08:12:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6637569325 # 1282
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
